--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,5 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'remixicon/fonts/remixicon.css';
 @import '../fonts/quicksand/stylesheet.css';
 @import './variables.scss';
